# Gamejam-game

./: CMakeLists.txt  install.bat
src/: Base.h  Window.h  main.cpp
src/Game objects/: Animation.h  Game object.cpp  Game object.h  Music player.h  Test rect.h  Time renderer.h
src/Game objects/Slava/: Boss.h  End.h  FireBall.h  Laser.h  MiniFireBall.h  Player.h  Wall.h
src/Game objects/common/: Animated.h  Flashing.h  RoundObject.h
src/Game objects/drawing/: AnimatedRectangle.h  Animation.cpp  BasicPicture.h  BasicText.h  FlashingRectangle.h
src/Game objects/livefish/: Asteroid.h  Player.h
src/Game objects/livefish/First part/: Player.h
